--- a/styles/styles.css
+++ b/styles/styles.css
@@ -120,7 +120,7 @@ nav {
 /* --------------- Fim da Navbar --------------- */
 
 #hero {
-  height: 80vh;
+  height: 98vh;
   padding: 0 6rem;
   position: relative;
 }
@@ -195,7 +195,7 @@ nav {
   left: 50%;
 }
 
-.hero-header {
+#hero-header {
   font-size: 2.5em;
   font-weight: 700;
   line-height: 1.1;
@@ -275,4 +275,109 @@ nav {
 .carousel-content {
   width: 80%;
   height: 100%;
+}
+
+/* ------------ Form de contato ----------- */
+
+input {
+  width: 100%;
+}
+
+label {
+  font-weight: 600;
+}
+
+#form-header {
+  font-size: 2.5em;
+  font-weight: 700;
+  width: 100%;
+}
+
+#form-img {
+  max-width: 80%;
+}
+
+#message {
+  resize: none;
+  height: 100%;
+  min-height: 100%;
+  width: 100%;
+  height: auto;
+}
+
+.data {
+  width: 100%;
+  height: 100%;
+}
+
+/* ------------ Footer ------------ */
+
+footer {
+  background-color: #2f4882;
+  color: #FFF;
+}
+
+#contact-info {
+  list-style: none;
+}
+
+#copyright {
+  color: #FFF;
+  font-style: italic;
+  font-size: .8em;
+}
+
+.footer-link {
+  color: #FFF;
+}
+
+.logo-footer {
+  width: 160px;
+  height: 160px;
+  border: 2px solid #FFF;
+  outline: 2px solid #7cad11;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.lines-footer {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.lines-footer > div {
+  background-color: #FFF;
+}
+
+.lines-footer > div:nth-child(1) {
+  position: absolute;
+  bottom: 65%;
+  height: 20px;
+  width: 100%;
+}
+
+.lines-footer > div:nth-child(2) {
+  width: 20px;
+  height: 150px;
+  position: absolute;
+  top: 28%;
+  left: 49%;
+  transform: rotate(-20deg);
+}
+
+.lines-footer > div:nth-child(3) {
+  height: 20px;
+  width: 100px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
+.socials{
+  width: 100%;
+}
+
+.social-icon {
+  color: #FFF;
 }
