--- a/css/features.css
+++ b/css/features.css
@@ -1,28 +1,39 @@
 .feature {
-    width: 100%;
-  }
-  
-  .feature-text h1 {
-    font-size: 2em;
-    font-weight: 700;
-  }
-  
-  .feature-text p{
-    color: #919191;
-    font-size: 1.3em;
-  }
-  
-  #cadeado {
-    width: 80%;
-  }
-  
-  .feature:nth-child(2) {
-    background-color: #6199c7;
-    color: #FFF;
-    clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
-  }
-  
-  .feature:nth-child(2) p {
-    color: #FFF;
-    font-weight: 300;
-  }
+  width: 100%;
+}
+
+.feature-text h1 {
+  font-size: 2em;
+  font-weight: 700;
+}
+
+.feature-text p {
+  color: #919191;
+  font-size: 1.3em;
+}
+
+#cadeado {
+  width: 80%;
+}
+
+.feature:nth-child(2) {
+  background-color: #6199c7;
+  color: #fff;
+  /* clip-path: polygon(0 0, 100% 10%, 100% 90%, 0 100%); */
+  border-top-right-radius: 6rem;
+}
+
+.feature:nth-child(2) p {
+  color: #fff;
+  font-weight: 300;
+}
+
+.feature:nth-child(3) {
+  width: 100%;
+  background-color: #6199c7;
+}
+
+.third-feature {
+  background-color: #FFF;
+  border-top-left-radius: 6rem;
+}
