--- a/css/hero.css
+++ b/css/hero.css
@@ -4,17 +4,42 @@
 }
 
 #hero-header {
-  font-size: 2.5em;
+  font-size: 1.5em;
   font-weight: 700;
   line-height: 1.1;
   text-align: center;
   color: #0a1329;
-  padding: 2rem 5rem;
 }
 
-@media (max-width: 768px) {
-    #hero-header {
-        font-size: 2em;
-        padding: 0;
-    }
+@media (min-width: 576px) {
+  #hero-header {
+    font-size: 2em;
+    padding: 0;
+  }
+}
+
+@media (min-width: 768px) {
+  #hero-header {
+    padding: 1rem 3rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  #hero-header {
+    font-size: 2.5em;
+    padding: 1rem 4rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  #hero-header {
+    font-size: 3em;
+  }
+}
+
+@media (min-width: 1700px) {
+  #hero-header {
+    font-size: 4.5em;
+    padding: 1em 3em;
+  }
 }
