--- a/css/navbar.css
+++ b/css/navbar.css
@@ -9,3 +9,21 @@
 .fa-bars {
   color: #fff;
 }
+
+@media (min-width: 768px) {
+  .nav-link {
+    font-size: 1.5em;
+  }
+}
+
+@media (min-width: 1440px) {
+  .nav-link {
+    font-size: 2em;
+  }
+}
+
+@media (min-width: 2200px) {
+  .nav-link {
+    font-size: 2.5em;
+  }
+}
