--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,9 @@
 body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
+  padding-top: 60px;
+  min-width: 375px;
+  width: 100%;
 }
 
 nav {
