--- a/css/logos.css
+++ b/css/logos.css
@@ -27,7 +27,7 @@
   width: 100%;
 }
 
-.lines-container-nav > div:nth-child(2) {
+.line-nav:nth-child(2) {
   width: 5px;
   height: 80%;
   position: absolute;
@@ -36,12 +36,12 @@
   transform: rotate(-20deg);
 }
 
-.lines-container-nav > div:nth-child(3) {
+.line-nav:nth-child(3) {
   height: 5px;
-  width: 50%;
+  width: 100%;
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 45%;
 }
 
 /* ----------- Hero Logo ----------- */
@@ -195,16 +195,18 @@
   }
 
   .logo-illustration {
-    width: 200px;
-    height: 200px;
-    bottom: -5%;
-    left: 73%;
+    width: 170px;
+    height: 170px;
+    bottom: 7%;
+    left: 78%;
   }
 
   .f-illustration-nav {
     width: 70px;
     height: 70px;
   }
+
+
 }
 
 @media (min-width: 1700px) {
@@ -217,6 +219,7 @@
     width: 250px;
     height: 250px;
     left: 77%;
+    bottom: -2%;
   }
 
   .logo-line:nth-child(1) {
