--- a/css/home/contato.css
+++ b/css/home/contato.css
@@ -1,12 +1,8 @@
-input {
-  width: 100%;
-}
-
 label {
   font-weight: 600;
 }
 
-#form-header {
+#form-main-header {
   font-size: 2.5em;
   font-weight: 700;
   width: 100%;
@@ -17,7 +13,7 @@ label {
 }
 
 #message {
-  resize: none;
+  resize: vertical;
   height: 100%;
   min-height: 100%;
   width: 100%;
@@ -27,4 +23,8 @@ label {
 .data {
   width: 100%;
   height: 100%;
+}
+
+.form-header img {
+  width: 20%;
 }
