--- a/css/home/testimonials.css
+++ b/css/home/testimonials.css
@@ -1,6 +1,5 @@
 #testimonials {
   background-color: #1368d6;
-  min-height: 600px;
 }
 
 .testimonial-img {
@@ -8,9 +7,9 @@
 }
 
 .testimonial-text {
+  font-size: 1.8em;
   font-weight: 500;
   color: #fff;
-  /* letter-spacing: 2px; */
 }
 
 .testimonial-person {
@@ -20,4 +19,24 @@
 .carousel-content {
   width: 80%;
   height: 100%;
+}
+
+@media (max-width: 768px) {
+  #testimonials {
+    min-width: 350px;
+  }
+
+  .testimonial-text {
+    font-size: 1em;
+  }
+
+  .testimonial-person {
+    font-size: 0.7em;
+  }
+}
+
+@media (min-width: 769px) {
+  #testimonials {
+    min-height: 450px;
+  }
 }
