--- a/css/solucoes/hero.css
+++ b/css/solucoes/hero.css
@@ -1,7 +1,40 @@
 #hero {
-    height: 100vh;
+    min-height: 95vh;
 }
 
 #hero-header {
     font-weight: 700;
+}
+
+.card {
+    overflow: hidden;
+    color: #FFF;
+}
+
+.card-title {
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+
+.card-text {
+    font-weight: 300;
+    line-height: 1.7;
+    letter-spacing: 1px;
+}
+
+.card-img {
+    width: 100%;
+    height: 300px;
+}
+
+.col:nth-child(1) .card-body {
+    background-color: #a3d140;
+}
+
+.col:nth-child(2) .card-body {
+    background-color: #1368d6;
+}
+
+.col:nth-child(3) .card-body {
+    background-color: #6199c7;
 }
