--- a/public/css/solucoes/hero.css
+++ b/public/css/solucoes/hero.css
@@ -38,3 +38,38 @@
 .col:nth-child(3) .card-body {
     background-color: #6199c7;
 }
+
+#carousel-hero {
+    height: 90vh;
+}
+
+#carouselExampleAutoplaying {
+    width: 100%;
+    height: 100%;
+}
+
+.carousel-item, .carousel-inner {
+    width: 100%;
+    height: 100%;
+}
+
+.carousel-item {
+    position: relative;
+}
+
+.carousel-item::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    background-color: hsla(0,0%,0%, 0.4);
+}
+
+.carousel-item:nth-child(1) {
+    background-image: url(../../images/fystema\ web.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
