--- a/public/css/solucoes/hero.css
+++ b/public/css/solucoes/hero.css
@@ -43,7 +43,7 @@
     height: 90vh;
 }
 
-#carouselExampleAutoplaying {
+#carouselExampleManual {
     width: 100%;
     height: 100%;
 }
@@ -57,19 +57,79 @@
     position: relative;
 }
 
-.carousel-item::after {
+.bg-img::after {
     content: "";
     position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
     top: 0;
     left: 0;
-    background-color: hsla(0,0%,0%, 0.4);
+    width: 100%;
+    height: 100%;
+    background-color: hsla(0, 0%, 0%, 0.4);
+    z-index: 1;
 }
 
-.carousel-item:nth-child(1) {
-    background-image: url(../../images/fystema\ web.jpg);
+.carousel-item:nth-child(1) .bg-img {
+    background-image: url(../../images/fystema\ web\ 2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.carousel-item:nth-child(2) .bg-img {
+    background-image: url(../../images/fystema\ agro.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.carousel-item:nth-child(3) .bg-img {
+    background-image: url(../../images/fystema\ vet.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.carousel-item:nth-child(4) .bg-img {
+    background-image: url(../../images/doctor-doing-their-work-pediatrics-office.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.carousel-text {
+    color: #FFF;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
+
+.carousel-text h1{
+    font-size: 3em;
+    font-weight: 700;
+}
+
+.carousel-text p {
+    font-size: 1.5em;
 }
