--- a/public/css/home/features.css
+++ b/public/css/home/features.css
@@ -1,11 +1,13 @@
 .feature-header {
   font-size: 1.5em;
-  font-weight: 700;
+  font-weight: 400;
+  color: #1368d6;
 }
 
 .feature-paragraph {
-  color: #919191;
+  color: #8a8a8a;
   font-size: 0.8em;
+  font-weight: 300;
 }
 
 #fi2 {
@@ -20,6 +22,10 @@
   background-color: #6199c7;
   color: #fff;
   border-top-right-radius: 6rem;
+}
+
+.feature:nth-child(2) .feature-header{
+  color: #FFF;
 }
 
 .feature:nth-child(2) p {
