--- a/public/css/solucoes/hero.css
+++ b/public/css/solucoes/hero.css
@@ -2,53 +2,11 @@
     min-height: 95vh;
 }
 
-#hero-header {
-    font-weight: 700;
-}
-
-.card {
-    overflow: hidden;
-    color: #FFF;
-}
-
-.card-title {
-    font-weight: 700;
-    letter-spacing: 1px;
-}
-
-.card-text {
-    font-weight: 300;
-    line-height: 1.7;
-    letter-spacing: 1px;
-}
-
-.card-img {
-    width: 100%;
-    height: 300px;
-}
-
-.col:nth-child(1) .card-body {
-    background-color: #a3d140;
-}
-
-.col:nth-child(2) .card-body {
-    background-color: #1368d6;
-}
-
-.col:nth-child(3) .card-body {
-    background-color: #6199c7;
-}
-
 #carousel-hero {
     height: 90vh;
 }
 
-#carouselExampleManual {
-    width: 100%;
-    height: 100%;
-}
-
-.carousel-item, .carousel-inner {
+#carouselExampleManual, .carousel-item, .carousel-inner {
     width: 100%;
     height: 100%;
 }
@@ -123,7 +81,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
-    text-align: center;
 }
 
 .carousel-text h1{
@@ -152,4 +109,13 @@
 
 .at-sign-4 {
     color: #8a8a8a;
+}
+
+@media (max-width: 768px) {
+    .carousel-text h1 {
+        font-size: 2em;
+    }
+    .carousel-text p {
+        font-size: .9em;
+    }
 }
